# thinkpad-fan

./: CMakeLists.txt  README.md
resources/etc/systemd/system/: thinkpad-fan.service
sources/: config.h.in  main.c
